--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <header>
-        <a href="">LOGO</a>
+            <img src="img/2.png" href="">
         <nav>
             <a class="a1 d1" href="index.html">Home</a>
             <a class="a2 d1" href="#">Cadastre-se</a>
             <div class="divCad">
-                <a href="formP.html">Psicólogos Profissionais</a>
-                <a href="formV.html">Psicólogos Volúntarios</a>
-                <a href="formJOGO.html">Jogo</a>
+                <a href="form/formP.html">Psicólogos Profissionais</a>
+                <a href="form/formV.html">Psicólogos Volúntarios</a>
+                <a href="form/formJOGO.html">Jogo</a>
             </div>
             <a class="a3 d1" href="card.html">Profissionais</a>
             <a class="a4 d1" href="voce.html">Parceiros</a>
