--- a/index.html
+++ b/index.html
@@ -13,16 +13,9 @@
     <header>
             <img src="img/2.png" href="">
         <nav>
-            <a class="a1 d1" href="index.html">Home</a>
-            <a class="a2 d1" href="#">Cadastre-se</a>
-            <div class="divCad">
-                <a href="form/formP.html">Psicólogos Profissionais</a>
-                <a href="form/formV.html">Psicólogos Volúntarios</a>
-                <a href="form/formJOGO.html">Jogo</a>
-            </div>
-            <a class="a3 d1" href="card.html">Profissionais</a>
-            <a class="a4 d1" href="voce.html">Parceiros</a>
-            <a class="a5 d1" href="quem somos">Quem somos</a>
+            <a class="a1 d1" href="index.html">Home</a>         
+            <a class="a4 d1" href="voce.html">Portifólio</a>
+            <a class="a5 d1" href="quem somos">Sobre mim</a>
             <a class="a6 d1" href="contato">Contato</a>
         </nav>
     </header>
